--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,20 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /*
+   mesajlasma renk kodu -> #2E6C7B
+   caht lıst -> 
+   dark blue -> #0B2E33
+
+  */
+
+  --chat-sidebar: #3c76ce;
+  --chat-chatlist: #4981CE;
+  --chat-chatbox: #1874CD;
+  --chat-text-color: #2E6C7B;
+  --chat-border-color: #446992;
+
 }
 
 a {
@@ -18,6 +32,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -46,9 +61,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,9 +76,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
